--- a/miramar-shop-backend/package.json
+++ b/miramar-shop-backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.10.3",
     "@strapi/plugin-users-permissions": "5.10.3",
+    "@strapi/provider-upload-cloudinary": "^5.11.0",
     "@strapi/strapi": "5.10.3",
     "better-sqlite3": "11.3.0",
     "react": "^18.0.0",
@@ -37,6 +38,7 @@
     "onlyBuiltDependencies": [
       "@swc/core",
       "better-sqlite3",
+      "core-js",
       "core-js-pure",
       "esbuild",
       "sharp"
