--- a/miramar-shop-backend/package.json
+++ b/miramar-shop-backend/package.json
@@ -16,6 +16,8 @@
     "@strapi/provider-upload-cloudinary": "^5.11.0",
     "@strapi/strapi": "5.10.3",
     "better-sqlite3": "11.3.0",
+    "pg": "^8.14.0",
+    "pg-connection-string": "^2.7.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
